//
//
//  Generated by StarUML(tm) C++ Add-In
//
//  @ Project : Untitled
//  @ File Name : Account.h
//  @ Date : 19.12.2025
//  @ Author : 
//
//


#if !defined(_ACCOUNT_H)
#define _ACCOUNT_H


class Account {
public:
	String id;
};

#endif  //_ACCOUNT_H
