//
//
//  Generated by StarUML(tm) C++ Add-In
//
//  @ Project : Untitled
//  @ File Name : Admin.h
//  @ Date : 19.12.2025
//  @ Author : 
//
//


#if !defined(_ADMIN_H)
#define _ADMIN_H

#include "User.h"
#include "CloudStorage.h"

class Admin {
public:
	void manage(User user, CloudStorage storage);
};

#endif  //_ADMIN_H
