//
//
//  Generated by StarUML(tm) C++ Add-In
//
//  @ Project : Untitled
//  @ File Name : CloudStorage.h
//  @ Date : 19.12.2025
//  @ Author : 
//
//


#if !defined(_CLOUDSTORAGE_H)
#define _CLOUDSTORAGE_H

#include "CloudFile.h"
#include "User.h"

class CloudStorage {
public:
	int storageName;
	List<CloudFile> files;
	void addFile(CloudFile file);
	CloudFile fetchFile(String fileName, User requester);
};

#endif  //_CLOUDSTORAGE_H
