//
//
//  Generated by StarUML(tm) C++ Add-In
//
//  @ Project : Untitled
//  @ File Name : DownloadTask.h
//  @ Date : 19.12.2025
//  @ Author : 
//
//


#if !defined(_DOWNLOADTASK_H)
#define _DOWNLOADTASK_H

#include "CloudFile.h"
#include "User.h"

class DownloadTask {
public:
	unsigned int partNumber;
	String status;
	void start(CloudFile file, User user);
	void cancel();
	List<Byte> getPartData();
};

#endif  //_DOWNLOADTASK_H
