//
//
//  Generated by StarUML(tm) C++ Add-In
//
//  @ Project : Untitled
//  @ File Name : User.h
//  @ Date : 19.12.2025
//  @ Author : 
//
//


#if !defined(_USER_H)
#define _USER_H

#include "Admin.h"
#include "Account.h"
#include "CloudFile.h"
#include "DownloadManager.h"
#include "CloudStorage.h"

class User : public Admin, public Account {
public:
	String name;
	void requestDownload(CloudFile file, DownloadManager manager);
	void listFiles(CloudStorage storage);
};

#endif  //_USER_H
