@startuml
' Диаграмма классов — процесс скачивания файла из облачного хранилища

' --- Классы и интерфейс ---
interface Account {
  - String id
  - DateTime created
  - boolean active
}

class Admin {
  + manager(User user, CloudStorage storage)
  - boolean superAdmin
}

class User {
  - String id
  - String name
  - int age
  - boolean verified
  - long quotaBytes
  + void requestDownload(CloudFile file, DownloadManager manager)
  + void listFiles(CloudStorage storage) : void
}

class CloudFile {
  - String fileName
  - int fileSize
  - DateTime createdAt
  - boolean encrypted
  + String getFileInfo() : String
  + byte[] read() : byte[]
}

class VideoFile {
  - String resolution
  - long durationSec
  - int bitrateKbps
  + String getResolution() : String
  + byte[] read() : byte[]
}

class CloudStorage {
  - String storageName
  - List<CloudFile> files
  - long totalSpaceBytes
  - long usedSpaceBytes
  + void addFile(CloudFile file)
  + CloudFile fetchFile(String fileName, User requester) : CloudFile
}

class DownloadManager {
  - List<DownloadTask> tasks
  - int maxConcurrent
  - long timeoutMs
  + void startDownload(User user, CloudFile file, CloudStorage storage) : void
  + void cancelDownload(DownloadTask task) : void
}

class DownloadTask {
  - int partNumber
  - String status
  + void start(CloudFile file, User user) : void
  + void cancel() : void
  + byte[] getPartData() : byte[]
  - int retryCount
  - boolean completed
}

' --- Отношения ---
' Обобщение (наследование)
Admin <|- User
CloudFile <|-- VideoFile

' Ассоциация: User использует DownloadManager (метод requestDownload)
User "1" --> "1" DownloadManager
User "1" --> "1" CloudStorage

' Агрегация: CloudStorage агрегирует CloudFile (файлы существуют независимо)
CloudStorage "1" o-- "*" CloudFile

' Композиция: DownloadManager композитно содержит DownloadTask (жизненный цикл задач внутри менеджера)
DownloadManager "1" *-- "*" DownloadTask

' Зависимости (пунктирные): методы используют другие классы в параметрах
DownloadManager ..> CloudStorage
DownloadTask ..> CloudFile

' Реализация
Account <|.. User

@enduml
